--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-    "name":"majiang_server",
-    "version":"0.0.1",
-    "private":false,
-    "dependencies":{
-        "pomelo":"2.2.5"
-    }
+  "name": "majiang_server",
+  "version": "0.0.1",
+  "private": false,
+  "dependencies": {
+    "bluebird": "^3.5.0",
+    "generic-pool": "^3.1.7",
+    "mysql": "^2.13.0",
+    "pomelo": "2.2.5"
+  }
 }
-
