--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "majiang_server",
   "version": "0.0.1",
   "private": false,
+  "scripts" : {
+    "test": "mocha ./test"
+  },
   "dependencies": {
     "bluebird": "^3.5.0",
+    "chai": "^3.5.0",
     "generic-pool": "^3.1.7",
+    "mocha": "^3.2.0",
     "mysql": "^2.13.0",
     "pomelo": "2.2.5"
   }
