--- a/.jshintrc
+++ b/.jshintrc
@@ -85,5 +85,7 @@
     "yui"           : false,    // Yahoo User Interface
 
     // Custom Globals
-    "globals"       : {}        // additional predefined global variables
+    "globals"       : {
+      "arguments" : true
+      }        // additional predefined global variables
 }
