--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "majiang_server",
   "version": "0.0.1",
   "private": false,
-  "scripts" : {
+  "scripts": {
     "test": "mocha ./test"
   },
   "dependencies": {
     "bluebird": "^3.5.0",
     "chai": "^3.5.0",
+    "crc": "^3.4.4",
     "generic-pool": "^3.1.7",
     "mocha": "^3.2.0",
     "mysql": "^2.13.0",
-    "pomelo": "2.2.5"
+    "pomelo": "^2.2.5",
+    "redis": "^2.7.1"
   }
 }
